--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,5 +26,29 @@ a {
 video {
     width: 404;
     height: 720;
-    /* text-align: center; */
+}
+
+h2 {
+    color: white;
+    font-weight: 300px;
+    font-size: 40;
+}
+
+h3 {
+    color: gray;
+    font-size: 21;
+}
+
+.campsite {
+    width: 896;
+    height: 527
+}
+
+.app {
+    width: 64;
+    height: 108;
+    color: white;
+}
+
+
 }
